--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "autoprefixer-stylus": "^0.14.0",
     "del": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-minify-html": "^1.0.6",
     "gulp-ng-html2js": "^0.2.2",
     "gulp-stylus": "^2.6.0",
-    "gulp-uglify": "1.5.1"
+    "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
-    "browserify": "^15.2.0",
+    "browserify": "^16.2.3",
     "gulp-sourcemaps": "^2.6.4",
     "strictify": "^0.2.0",
     "vinyl-buffer": "^1.0.1",
